--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"danielstjules/stringy": "^2.3.2"
 	},
     "require-dev" : {
-	    "phpunit/phpunit": "~5.0",
+	    "phpunit/phpunit": "^5.4.6",
 	    "satooshi/php-coveralls": "~1.0"
     },
 	"autoload" : {
